# game_dodecahedron

./: .gitignore  Makefile  Makefile_ref  README.md
materials/: Controls_tables.md  Doxyfile  Finite-state_machine.md  MVC_MVP_MVVM.md  S-Snake_check_list.md  Snake_check_list.md  Te-tris_check_list.md
src/: Makefile  Makefile_tetris  Makefile_tetris_ref  consol.cpp
src/brick_game/snake/: Makefile  README.md  s-snake.h  s-snake.hpp  snake.cpp
src/brick_game/snake/controller_src/: controller.cpp  controller.hpp
src/brick_game/snake/game_src/: S-snakeMain.h  S-snakeMain.hpp  non-class.cpp  service.hpp
src/brick_game/snake/game_src/SnakeGame/: SnakeGame.cpp  SnakeGame.hpp
src/brick_game/snake/game_src/field_/: field_.cpp  field_.hpp
src/brick_game/snake/game_src/food_/: food_.cpp  food_.hpp
src/brick_game/snake/game_src/randGen_/: randGen_.cpp  randGen_.hpp
src/brick_game/snake/game_src/snake_/: snake_.cpp  snake_.hpp
src/brick_game/snake/game_src/timer_/: timer_.cpp  timer_.hpp
src/brick_game/tetris/: Makefile  README.md  tetris.c  tetris.h
src/brick_game/tetris/database/: tetris_TSS.h
src/brick_game/tetris/timer/: timer.c
src/gui/cli/: tui.c  tui.h
src/gui/cli/database/: big_inscriptions.h
src/gui/data/: s-stake_ctrl.txt  te-tris_ctrl.txt
src/gui/desktop/: CMakeLists.txt  Colors_c.tpp  gamewindow.cpp  gamewindow.h  gamewindow.ui  gamewindowzero.cpp  gamewindowzero.hpp  gamewindowzero.ui  gamewindowzero.ui.autosave  gridscene_.cpp  gridscene_.h  gui.cpp  libinteraction.cpp  main.cpp  workspaces.cpp
src/gui/desktop/gridscene_/: gridscene_.cpp  gridscene_.h
tests/: Makefile  s-snake_tests.cpp  snake_tests.cc  tetris_tests.c
